# diet-planner

./: .env  .env.example  .gitignore  .vercelignore  Procfile  README.md  VERCEL_DEPLOYMENT.md  api.py  check_db.py  check_env.py  database.db  database.db-journal  direct_fix.py  fix_api_calls.py  fix_api_calls_precise.py  fix_duplicate_blocks.py  fix_html_formatting.py  fix_specific_endpoints.py  pyproject.toml  pyproject.toml.bak  remove_clerk.py  remove_function.py  remove_subscription_elements.py  remove_subscription_elements_comprehensive.py  requirements-compiled.txt  requirements-prod.txt  requirements-vercel.txt  requirements.txt  run_app.py  setup_turso_guide.py  temp_remove_clerk.py  test_app.py  test_auth.py  test_db_init.py  test_import.py  test_turso.py  update_login_required.py  update_prompts.py  vercel.json  vercel_build.sh  (+1 more)
instance/: database.db  diet_planner.db  mydatabase.db
src/diet_planner/: __init__.py  app.py  app.py.corrupted  chatbot.html  dashboard.html  database.db  diet_plan.html  exercise_planner.html  history.html  landing.html  login.html  meal_plan.html  nutrition_tracking.html  profile-completion.html  profile.html  recipes.html  register.html  register_new.html  settings.html  shopping_list.html
supabase/: seed.sql
