[project]
name = "diet-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "flask>=2.3.2",
    "flask-sqlalchemy>=3.0.5",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.10.0",
    "authlib>=1.6.5"
]