[project]
name = "diet-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "umm e habiba madni", email = "88267142+Muskanmadni@users.noreply.github.com" }
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "Flask-SQLAlchemy==3.1.1",
    "python-dotenv==1.0.1",
    "google-generativeai==0.8.3",
    "gunicorn==23.0.0",
]

[project.scripts]
diet-planner = "diet_planner:main"
app = "diet_planner.app:start"
